assets/css/global.css
@import 'highlight.js/styles/github-dark.css';

body {
  /* Font Smoothing */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  -webkit-tap-highlight-color: transparent;
}

.prose.w-full {
  max-width: 100%;
}

.article-content {
  img {
    border-radius: .8em;
  }
}

